# hls2744

./: README.md  tmp.cabal
app/: Main.hs
src/: MyLib.hs
test/: Spec.hs
