cabal-version:      2.4
name:               tmp
version:            0.1.0.0
author:             Ondrej Sebek
maintainer:         xsebek@fi.muni.cz

library
    exposed-modules:  MyLib
    build-depends:
        base >= 4.7 && < 5,
        hmatrix-glpk,
        containers,
        data-ordlist,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base >= 4.7 && < 5,
        hspec,
        tmp,
    default-language: Haskell2010

executable tmp
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        tmp
    hs-source-dirs:   app
    default-language: Haskell2010
